--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Installing Surge
         run: npm install --global surge
-      - name: deploying using surge
+      - name: deployment of app using surge
         run: surge ./ usamanazir.surge.sh --token " b2b96eb95e6ae5f5aeb47cfe3630e0d2"
 
 
